--- a/css/20210517_09_flex.html
+++ b/css/20210517_09_flex.html
@@ -40,8 +40,8 @@
             justify-content: space-between;
 
             /* 반대측 */
-            align-items: center;
-            align-content: space-between;
+            /* align-items: center;
+            align-content: space-between; */
 
 
         }
